2003-05-01  Chris Blumenberg  <cblu@apple.com>

        Fixed: 3234888 - REGRESSION: "can't add a plug-in to a defunct WebPluginController" error, then crash
        Fixed: 3226392 - REGRESSION: Safari crashed while loading Java applet at PopCap.com
        
        Reviewed by darin.

        * WebView.subproj/WebFramePrivate.h:
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame setController:]): fixed comment
        * WebView.subproj/WebView.m:
        (-[WebView dealloc]): call [self _close]
        * WebView.subproj/WebViewPrivate.h:
        * WebView.subproj/WebViewPrivate.m:
        (-[WebViewPrivate dealloc]): let the WebView class clear the frames
        (-[WebView _close]): remove self from controller set and detach and release frame

=== Safari-77 ===

2003-05-01  John Sullivan  <sullivan@apple.com>

	- fixed 3245793 -- Launching Safari-75 after tip of tree 
	erases all history

        Reviewed by Chris, Don

        * History.subproj/WebHistoryItem.m:
	keep using "lastVisitedDate" as the dictionary key, since old
	Safaris otherwise can't read the History file.
        (-[WebHistoryItem dictionaryRepresentation]):
	keep storing the time interval as a string, since old Safaris
	otherwise can't read the History file
        (-[WebHistoryItem initFromDictionaryRepresentation:]):
	read the stored date as a string and convert to a double,
	as we did before.

2003-05-01  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3169117 -- dragging while using a scroll wheel affects scroll movement

        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebNSWindow nextEventMatchingMask:untilDate:inMode:dequeue:]):
        Just return nil when called with NSScrollWheelMask to work around the bug where any
        kind of event can be returned when this mask is passed. This will prevent scroll wheel
        events from being coalesced, but it's better than extracting events of all different