@@ -1,3 +1,11 @@
+2003-05-01  Richard Williamson   <rjw@apple.com>
+
+        Added missing header and alphabetized.
+        
+        Reviewed by Ken.
+
+        * Misc.subproj/WebKit.h:
+
 2003-05-01  Chris Blumenberg  <cblu@apple.com>
 
         Fixed: 3234888 - REGRESSION: "can't add a plug-in to a defunct WebPluginController" error, then crash
